# BlueFairy

./: .gitignore  README.md  pyproject.toml
bluefairy/grammar/: __init__.py  fol_grammar.lark  malls_fol_parser.py  utils.py
bluefairy/norms/: __init__.py
bluefairy/nouns/: __init__.py  collection.py  embedding.py  graph.py  lexical_metrics.py  unification.py  utils.py
bluefairy/prompts/: __init__.py  context_identification.txt  norms_translation.txt  nouns_classification.txt  nouns_collection.txt  nouns_generation.txt
core/: __init__.py
evaluation/: __init__.py  models-to-test.csv
evaluation/analysis/: __init__.py  fol_grammar.lark  malls_fol_parser.py  utils.py
evaluation/data/: MALLS-nutrition-examples.csv  MALLS-nutrition-test.csv  __init__.py
evaluation/data/scripts/: __init__.py
evaluation/figures/: __init__.py
evaluation/sentenceTranslation/: __init__.py  __main__.py
evaluation/sentenceTranslation/analysis/: __init__.py
evaluation/sentenceTranslation/figures/: __init__.py
evaluation/sentenceTranslation/results/: __init__.py
evaluation/unification/: __init__.py  utils.py
evaluation/unification/figures/: __init__.py  generate_pca_scatter_plots.py
huggingFaceUtils/: __init__.py
huggingFaceUtils/models/: __init__.py
ollamaUtils/: __init__.py
openAIUtils/: __init__.py
scripts/: malls-nutrition.py  models-selector.py
test/: __init__.py  test_norms_translation.py  test_nouns_collection.py
test/data/: __init__.py  ministry-textual-norms.txt  nutritionist-textual-norms.txt  user-textual-norms.txt
(+2 files in other folders)
