[project]
name = "bluefairy"
version = "0.1.0"
description = ""
authors = [
    {name = "Matteo Magnini",email = "matteo.magnini@uni.lu"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfreader (>=0.1.15,<0.2.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
