[project]
name = "bluefairy"
version = "0.1.0"
description = ""
authors = [
    {name = "Matteo Magnini",email = "matteo.magnini@uni.lu"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pdfreader (>=0.1.15,<0.2.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "inflect (>=7.5.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "levenshtein (>=0.27.3,<0.28.0)",
    "lark (>=1.3.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "umap-learn (>=0.5.11,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
